--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo_ucc"
+        android:icon="@drawable/ucc_nobackground"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
