--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,9 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.android.gms:play-services:10.0.1'
+    compile 'com.google.firebase:firebase-core:10.0.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.firebaseui:firebase-ui-database:1.1.1'
     testCompile 'junit:junit:4.12'
 }
 
