--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,12 +8,15 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
+        android:name="android.support.multidex.MultiDexApplication"
         android:allowBackup="true"
         android:icon="@drawable/ucc_nobackground"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".CheckAvailability">
+        <activity
+            android:name=".CheckAvailability"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,7 +25,10 @@
         </activity>
         <activity android:name=".BaseActivity" />
         <activity android:name=".About" />
-        <activity android:name=".CarParkDetails"/>
+        <activity
+            android:name=".CarParkDetails"
+            android:configChanges="orientation|screenSize" />
+
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -36,10 +42,10 @@
             android:value="AIzaSyBAuas51izRRR2gsWe_uF1xYVdYlFaMBx0" />
 
 
-
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"/>
+            android:configChanges="orientation|screenSize"
+            android:label="@string/title_activity_maps" />
     </application>
 
 </manifest>
